--- a/index.html
+++ b/index.html
@@ -24,39 +24,40 @@
   <body>
     <header class="header">
       <div class="conteiner">
-        <nav class="heder-nav">
-          <a href="./index.html" class="logo link"
-            ><span class="logo-acent">Web</span>Studio</a
+        <nav class="navigetion">
+          <a href="./index.html" class="navigetion__logo link"
+            ><span class="navigetion__acent">Web</span>Studio</a
           >
-          <ul class="header-list list">
-            <li class="header-item">
-              <a href="./index.html" class="header-list link active current"
+          <ul class="navigetion__list list">
+            <li class="navigetion__item">
+              <a
+                href="./index.html"
+                class="navigetion__list link active current"
                 >Студия</a
               >
             </li>
-            <li class="header-item">
-              <a href="./portfolio.html" class="header-list link">Портфолио</a>
+            <li class="navigetion__item">
+              <a href="./portfolio.html" class="navigetion__list link"
+                >Портфолио</a
+              >
             </li>
-            <li class="header-item">
-              <a href="" class="header-list link">Контакты</a>
+            <li class="navigetion__item">
+              <a href="" class="navigetion__list link">Контакты</a>
             </li>
           </ul>
         </nav>
-        <ul class="header-link list">
+        <ul class="connect list">
           <li>
-            <a
-              href="mailto:info@devstudio.com"
-              class="header-link-contact link"
-            >
-              <svg class="header-icon" width="16px" height="12px">
+            <a href="mailto:info@devstudio.com" class="connect__contact link">
+              <svg class="connect__icon" width="16px" height="12px">
                 <use href="./img/symbol-defs.svg#icon-envelope"></use>
               </svg>
               info@devstudio.com</a
             >
           </li>
           <li>
-            <a href="tel:+380961111111" class="header-link-contact link">
-              <svg class="header-icon" width="10px" height="16px">
+            <a href="tel:+380961111111" class="connect__contact link">
+              <svg class="connect__icon" width="10px" height="16px">
                 <use href="./img/symbol-defs.svg#icon-smartphone"></use>
               </svg>
               +38 096 111 11 11</a
@@ -69,7 +70,7 @@
       <section class="hero">
         <div class="conteiner">
           <h1 class="hero-title">Эффективные решения для вашего бизнеса</h1>
-          <button type="button" class="hero-btn" data-modal-open>
+          <button type="button" class="hero-btn" data-modal__open>
             Заказать услугу
           </button>
         </div>
@@ -130,39 +131,39 @@
       </section>
       <section class="work">
         <div class="conteiner">
-          <h2 class="work-title">Чем мы занимаемся</h2>
-          <ul class="work-item list">
+          <h2 class="work__title">Чем мы занимаемся</h2>
+          <ul class="work__item list">
             <li>
-              <div class="work-box">
+              <div class="work__box">
                 <img
                   src="./img/box1.jpg"
                   alt="work box1"
                   width="370"
                   height="294"
                 />
-                <p class="work-text">Десктопные приложения</p>
+                <p class="work__text">Десктопные приложения</p>
               </div>
             </li>
             <li>
-              <div class="work-box">
+              <div class="work__box">
                 <img
                   src="./img/box2.jpg"
                   alt="work box2"
                   width="370"
                   height="294"
                 />
-                <p class="work-text">Мобильные приложения</p>
+                <p class="work__text">Мобильные приложения</p>
               </div>
             </li>
             <li>
-              <div class="work-box">
+              <div class="work__box">
                 <img
                   src="./img/box3.jpg"
                   alt="work box3"
                   width="370"
                   height="294"
                 />
-                <p class="work-text">Дизайнерские решения</p>
+                <p class="work__text">Дизайнерские решения</p>
               </div>
             </li>
           </ul>
@@ -404,26 +405,26 @@
     <footer class="footer">
       <div class="conteiner">
         <div class="cont">
-          <a href="./index.html" class="logo-footer link"
-            ><span class="logo-acent">Web</span>Studio</a
+          <a href="./index.html" class="footer__logo link"
+            ><span class="footer__logo-acent">Web</span>Studio</a
           >
           <address class="contacts">
-            <ul class="footer-link list">
-              <li class="footer-item">
+            <ul class="footer__link list">
+              <li class="footer__item">
                 <a
                   href="https://goo.gl/maps/eJnzdVW8tuNHDkBv5"
-                  class="footer-link link"
+                  class="footer__link link"
                   rel="noopener noreferer nofollow"
                   >г. Киев, пр-т Леси Украинки, 26</a
                 >
               </li>
-              <li class="footer-item">
-                <a href="mailto:info@devstudio.com" class="footer-link link"
+              <li class="footer__item">
+                <a href="mailto:info@devstudio.com" class="footer__link link"
                   >info@devstudio.com</a
                 >
               </li>
-              <li class="footer-item">
-                <a href="tel:+380961111111" class="footer-link link"
+              <li class="footer__item">
+                <a href="tel:+380961111111" class="footer__link link"
                   >+38 096 111 11 11</a
                 >
               </li>
@@ -431,32 +432,32 @@
           </address>
         </div>
         <div class="join">
-          <h2 class="join-title">присоединяйтесь</h2>
-          <ul class="join-soc list">
-            <li class="join-soc-item">
-              <a href="" class="join-soc-link link">
-                <svg class="join-soc-icon" width="20" height="20">
+          <h2 class="join__title">присоединяйтесь</h2>
+          <ul class="join__soc list">
+            <li class="join__soc-item">
+              <a href="" class="join__soc-link link">
+                <svg class="join__soc-icon" width="20" height="20">
                   <use href="./img/symbol-defs.svg#icon-instagram-2"></use>
                 </svg>
               </a>
             </li>
-            <li class="join-soc-item">
-              <a href="" class="join-soc-link link">
-                <svg class="join-soc-icon" width="20" height="20">
+            <li class="join__-soc-item">
+              <a href="" class="join__soc-link link">
+                <svg class="join__soc-icon" width="20" height="20">
                   <use href="./img/symbol-defs.svg#icon-twitter-1"></use>
                 </svg>
               </a>
             </li>
-            <li class="join-soc-item">
-              <a href="" class="join-soc-link link">
-                <svg class="join-soc-icon" width="20" height="20">
+            <li class="join__soc-item">
+              <a href="" class="join__soc-link link">
+                <svg class="join__soc-icon" width="20" height="20">
                   <use href="./img/symbol-defs.svg#icon-facebook-1"></use>
                 </svg>
               </a>
             </li>
-            <li class="join-soc-item">
-              <a href="" class="join-soc-link link">
-                <svg class="join-soc-icon" width="20" height="20">
+            <li class="join__soc-item">
+              <a href="" class="join__soc-link link">
+                <svg class="join__soc-icon" width="20" height="20">
                   <use href="./img/symbol-defs.svg#icon-linkedin-1"></use>
                 </svg>
               </a>
@@ -464,18 +465,18 @@
           </ul>
         </div>
         <div class="send">
-          <p class="send-title">Подпишитесь на рассылку</p>
+          <p class="send__title">Подпишитесь на рассылку</p>
 
-          <form class="send-imp">
+          <form class="send__imp">
             <input
               type="email"
-              class="send-email"
+              class="send__email"
               name="send-email"
               placeholder="E-mail"
             />
-            <button type="submit" class="btn-send">
+            <button type="submit" class="send__btn">
               Подписаться
-              <svg class="send-svg" width="24" height="24">
+              <svg class="send__svg" width="24" height="24">
                 <use href="./img/symbol-defs.svg#icon-send"></use>
               </svg>
             </button>
@@ -485,7 +486,7 @@
     </footer>
     <div class="backdrop is-hidden" data-modal>
       <div class="modal">
-        <button type="button" class="modal-close" data-modal-close>
+        <button type="button" class="modal__close" data-modal__close>
           <svg width="18" height="18">
             <use
               class="close-svg"
@@ -493,83 +494,83 @@
             ></use>
           </svg>
         </button>
-        <p class="modal-title">Оставьте свои данные, мы вам перезвоним</p>
-        <form class="modal-form">
-          <div class="modal-field">
-            <label class="modal-lable" for="user-name">Имя</label>
-            <div class="input-wrap">
+        <p class="modal__title">Оставьте свои данные, мы вам перезвоним</p>
+        <form class="modal__form">
+          <div class="modal__field">
+            <label class="modal__lable" for="user-name">Имя</label>
+            <div class="modal__input-wrap">
               <input
                 type="text"
-                class="modal-input"
+                class="modal__input"
                 name="user-name"
                 placeholder=""
                 required
                 id="user-name"
               />
-              <svg class="icon-input" width="18" height="18">
+              <svg class="modal__icon-input" width="18" height="18">
                 <use href="./img/symbol-defs.svg#icon-person"></use>
               </svg>
             </div>
           </div>
-          <div class="modal-field">
-            <label class="modal-lable" for="user-tel">Телефон</label>
-            <div class="input-wrap">
+          <div class="modal__field">
+            <label class="modal__lable" for="user-tel">Телефон</label>
+            <div class="modal__input-wrap">
               <input
                 type="tel"
-                class="modal-input"
+                class="modal__input"
                 name="user-tel"
                 placeholder=""
                 required
                 id="user-tel"
               />
-              <svg class="icon-input" width="18" height="18">
+              <svg class="modal__icon-input" width="18" height="18">
                 <use href="./img/symbol-defs.svg#icon-phone"></use>
               </svg>
             </div>
           </div>
-          <div class="modal-field">
-            <label class="modal-lable" for="user-email">Почта</label>
-            <div class="input-wrap">
+          <div class="modal__field">
+            <label class="modal__lable" for="user-email">Почта</label>
+            <div class="modal__input-wrap">
               <input
                 type="email"
-                class="modal-input"
+                class="modal__input"
                 name="user-email"
                 placeholder=""
                 required
                 id="user-email"
               />
-              <svg class="icon-input" width="18" height="18">
+              <svg class="modal__icon-input" width="18" height="18">
                 <use href="./img/symbol-defs.svg#icon-email"></use>
               </svg>
             </div>
           </div>
-          <div class="modal-coment">
-            <label class="modal-lable" for="user-text">Комментарий</label>
+          <div class="modal__coment">
+            <label class="modal__lable" for="user-text">Комментарий</label>
             <textarea
               name="user-text"
               id="user-text"
-              class="modal-text"
+              class="modal__text"
               placeholder="Введите текст"
             ></textarea>
           </div>
-          <div class="modal-policy">
+          <div class="modal__policy">
             <input
               type="checkbox"
-              class="modal-chek visually-hidden"
+              class="modal__chek visually-hidden"
               id="policy"
               name="policy"
               value="true"
             />
-            <label for="policy" class="chek-lable">
+            <label for="policy" class="modal__chek-lable">
               <span>
-                <svg class="icon-che" width="13" height="10">
+                <svg class="modal__icon-chek" width="13" height="10">
                   <use href="./img/symbol-defs.svg#icon-chek"></use>
                 </svg> </span
               >Соглашаюсь с рассылкой и принимаю
-              <a href="" class="link-chek link"> Условия договора</a>
+              <a href="" class="modal__chek-link link"> Условия договора</a>
             </label>
           </div>
-          <button type="submit" class="modal-btn">Отправить</button>
+          <button type="submit" class="modal__btn">Отправить</button>
         </form>
       </div>
     </div>
